# shakti

./: .gitdiffignore  .gitignore  .pre-commit-config.yaml  README.md  config.shakti.yaml  pyproject.toml
shakti/: bye.py  hello.py  main.py  utils.py
shakti/cmd/: cmd_list.py  cmd_list_eval.py  commands.py
shakti/git/: commands.py  git_add.py  git_diff.py  git_difftool.py  git_message.py  git_signature.py  git_tree.py  utils.py
shakti/report/: commands.py  timer.py
